--- a/portf/package.json
+++ b/portf/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
-    "typewriter-effect": "^2.22.0"
+    "typewriter-effect": "^2.22.0",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
